--- a/methods_available_for_automation/Methods_Available_for_Automation.adoc
+++ b/methods_available_for_automation/Methods_Available_for_Automation.adoc
@@ -238,29 +238,29 @@ The following nested list displays the hierarchy. Certain methods in
 this list have links to additional methods detailed in this book.
 Methods without links do not have any additional methods.
 
-* Top Level: Base - <<Base Methods,Base Methods>>
+* Top Level: Base - <<base-methods,Base Methods>>
 ** Authentication (authentication)
 *** Private Keys (auth_private_key)
 **** Key Pair for Clouds (auth_key_pair_cloud)
 ***** Amazon (auth_key_pair_amazon)
 ***** OpenStack (auth_key_pair_openstack)
-** Availability Zones (availability_zone) - <<Availability Zones (availability_zone),Availability Zones (availability_zone)>>
+** Availability Zones (availability_zone) - <<availability_zone,Availability Zones (availability_zone)>>
 *** Amazon (availability_zone_amazon)
 *** OpenStack (availability_zone_openstack)
-** Classification (classification) - <<Classifications (classification),Classifications (classification)>>
-** Cloud Networks (cloud_network) - <<Cloud Networks (cloud_network),Cloud Networks (cloud_network)>>
-** Cloud Resource Quotas (cloud_resource_quota) - <<Cloud Resource Quotas (cloud_resource_quota),Cloud Resource Quotas (cloud_resource_quota)>>
+** Classification (classification) - <<classification,Classifications (classification)>>
+** Cloud Networks (cloud_network) - <<cloud_network,Cloud Networks (cloud_network)>>
+** Cloud Resource Quotas (cloud_resource_quota) - <<cloud_resource_quota,Cloud Resource Quotas (cloud_resource_quota)>>
 *** OpenStack (openstack_resource_quota)
-** Cloud Subnets (cloud_subnet) - <<Cloud Subnets (cloud_subnet),Cloud Subnets (cloud_subnet)>>
-** Cloud Tenants (cloud_tenant) - <<Cloud Tenants (cloud_tenant),Cloud Tenants (cloud_tenant)>>
-** Customization Templates (customization_template) - <<Customization Template (customization_template),Customization Template (customization_template)>>
+** Cloud Subnets (cloud_subnet) - <<cloud_subnet,Cloud Subnets (cloud_subnet)>>
+** Cloud Tenants (cloud_tenant) - <<cloud_tenant,Cloud Tenants (cloud_tenant)>>
+** Customization Templates (customization_template) - <<customization_template,Customization Template (customization_template)>>
 *** Cloud Init (customization_template_cloud_init)
 *** Kickstart (customization_template_kickstart)
 *** Sysprep (customization_template_sysprep)
-** Cluster (ems_cluster) - <<Clusters (ems_cluster),Clusters (ems_cluster)>>
-** Event (ems_event) - <<Management System Events (ems_event),Management System Events (ems_event)>>
-** Folder (ems_folder) - <<Management System Folders (ems_folder),Management System Folders (ems_folder)>>
-** Providers (ext_management_system) - <<Providers (ext_management_system), Providers (ext_management_system)>>
+** Cluster (ems_cluster) - <<ems_cluster,Clusters (ems_cluster)>>
+** Event (ems_event) - <<ems_event,Management System Events (ems_event)>>
+** Folder (ems_folder) - <<ems_folder,Management System Folders (ems_folder)>>
+** Providers (ext_management_system) - <<ext_management_system, Providers (ext_management_system)>>
 *** Cloud (ems_cloud)
 **** Amazon (ems_amazon)
 **** Openstack (ems_openstack)
@@ -269,40 +269,40 @@ Methods without links do not have any additional methods.
 **** Red Hat Enterprise Virtualization (ems_redhat)
 **** VMware vCenter (ems_vmware)
 ** Filesystems (filesystem)
-** Firewall Rules (filewall_rule) - <<Firewall Rules (firewall_rule),Firewall Rules (firewall_rule)>>
-** Flavors - <<Flavors (flavor)>>
+** Firewall Rules (filewall_rule) - <<firewall_rule,Firewall Rules (firewall_rule)>>
+** Flavors - <<flavor,Flavors (flavor)>>
 *** Amazon (flavor_amazon)
 *** OpenStack (flavor_openstack)
-** Floating IPs (floating_ip) - <<Floating IPs (floating_ip),Floating IPs (floating_ip)>>
+** Floating IPs (floating_ip) - <<floating_ip,Floating IPs (floating_ip)>>
 *** Amazon (floating_ip_amazon)
 *** OpenStack (floating_ip_openstack)
-** Guest Applications (guest_application) - <<Guest Applications (guest_application),Guest Applications (guest_application)>>
-** Guest Devices (guest_device) - <<Guest Device (guest_device),Guest Device (guest_device)>>
-** Hardware (hardware) - <<Hardware (hardware),Hardware (hardware)>>
-** Hosts (host) - <<Hosts (host),Hosts (host)>>
+** Guest Applications (guest_application) - <<guest_application,Guest Applications (guest_application)>>
+** Guest Devices (guest_device) - <<guest_device,Guest Device (guest_device)>>
+** Hardware (hardware) - <<hardware,Hardware (hardware)>>
+** Hosts (host) - <<host,Hosts (host)>>
 *** Red Hat Enterprise Virtualization (host_redhat)
 *** VMware (host_vmware)
-**** VMware ESX (host_vmware_esx) - <<Hosts: Vmware ESX (host_vmware_esx),Hosts: Vmware ESX (host_vmware_esx)>>
+**** VMware ESX (host_vmware_esx) - <<host_vmware_esx,Hosts: Vmware ESX (host_vmware_esx)>>
 ** ISO Images (iso_image)
 ** Jobs (job)
-** LANs (lan) - <<LAN (lan),LAN (lan)>>
-** Groups (miq_group) - <<Groups (miq_group),Groups (miq_group)>>
+** LANs (lan) - <<lan,LAN (lan)>>
+** Groups (miq_group) - <<miq_group,Groups (miq_group)>>
 ** Policies (miq_policy)
-** Proxies (miq_proxy) - <<Proxies (miq_proxy),Proxies (miq_proxy)>>
-** Requests (miq_request) - <<Request (miq_request),Request (miq_request)>>
-*** Automation (automation_request) - <<Automation Request (automation_request),Automation Request (automation_request)>>
-*** Host Provisioning (miq_host_provision_request) - <<Host Provision Request (miq_host_provision_request),Host Provision Request (miq_host_provision_request)>>
-*** VM Provisioning (miq_provision_request) - <<VM Provision Request (miq_provision_request),VM Provision Request (miq_provision_request)>>
+** Proxies (miq_proxy) - <<miq_proxy,Proxies (miq_proxy)>>
+** Requests (miq_request) - <<miq_request,Request (miq_request)>>
+*** Automation (automation_request) - <<automation_request,Automation Request (automation_request)>>
+*** Host Provisioning (miq_host_provision_request) - <<miq_host_provision_request,Host Provision Request (miq_host_provision_request)>>
+*** VM Provisioning (miq_provision_request) - <<miq_provision_request,VM Provision Request (miq_provision_request)>>
 **** VM Templates (miq_provision_request_template)
 *** Service Reconfiguration (service_reconfigure_request)
 *** Service Template Provisioning (service_template_provision_request)
 *** VM Migration (vm_migrate_request)
 *** VM Reconfiguration (vm_reconfigure_request)
-** Request Task (miq_request_task) - <<Request Task (miq_request_task),Request Task (miq_request_task)>>
-*** Automation (automation_task) - <<Automation Task (automation_task),Automation Task (automation_task)>>
-*** Host Provisioning (miq_host_provision) - <<Host Provision Task (miq_host_provision),Host Provision Task (miq_host_provision)>>
-*** VM Provisioning (miq_provision) - <<VM Provision Task (miq_provision),VM Provision Task (miq_provision)>>
-**** Cloud (miq_provision_cloud) - <<VM Provisioning for Clouds Task (miq_provision_cloud),VM Provisioning for Clouds Task (miq_provision_cloud)>>
+** Request Task (miq_request_task) - <<miq_request_task,Request Task (miq_request_task)>>
+*** Automation (automation_task) - <<automation_task,Automation Task (automation_task)>>
+*** Host Provisioning (miq_host_provision) - <<miq_host_provision,Host Provision Task (miq_host_provision)>>
+*** VM Provisioning (miq_provision) - <<miq_provision,VM Provision Task (miq_provision)>>
+**** Cloud (miq_provision_cloud) - <<miq_provision_cloud,VM Provisioning for Clouds Task (miq_provision_cloud)>>
 ***** Amazon (miq_provision_amazon)
 ***** OpenStack (miq_provision_openstack)
 **** Red Hat Enterprise Virtualization (miq_provision_redhat)
@@ -311,29 +311,29 @@ Methods without links do not have any additional methods.
 **** VMware (miq_provision_vmware)
 ***** Via NetApp RCU (miq_provision_vmware_via_net_app_rcu)
 ***** Via PXE (miq_provision_vmware_via_pxe)
-*** Service Reconfiguration (service_reconfigure_task) - <<Service Reconfiguration Task (service_reconfigure_task),Service Reconfiguration Task (service_reconfigure_task)>>
-*** Service Template Provisioning (service_template_provision_task) - <<Service Template Provision Task (service_template_provision_task),Service Template Provision Task (service_template_provision_task)>>
-*** VM Migratation (vm_migrate_task) - <<VM Migrate Task (vm_migrate_task),VM Migrate Task (vm_migrate_task)>>
+*** Service Reconfiguration (service_reconfigure_task) - <<service_reconfigure_task,Service Reconfiguration Task (service_reconfigure_task)>>
+*** Service Template Provisioning (service_template_provision_task) - <<service_template_provision_task,Service Template Provision Task (service_template_provision_task)>>
+*** VM Migratation (vm_migrate_task) - <<vm_migrate_task,VM Migrate Task (vm_migrate_task)>>
 *** VM Reconfiguration (vm_reconfigure_task)
-** Servers (miq_server) - <<Servers (miq_server),Servers (miq_server)>>
-** Networks (network) - <<Network (network),Network (network)>>
+** Servers (miq_server) - <<miq_server,Servers (miq_server)>>
+** Networks (network) - <<network,Network (network)>>
 ** Operating Systems (operating_system)
-** PXE Images (pxe_image) - <<PXE Image (pxe_image),PXE Image (pxe_image)>>
+** PXE Images (pxe_image) - <<pxe_image,PXE Image (pxe_image)>>
 *** iPXE (pxe_image_ipxe)
 *** PXELINUX (pxe_image_pxelinux)
-** PXE Servers (pxe_server) - <<PXE Server (pxe_server),PXE Server (pxe_server)>>
+** PXE Servers (pxe_server) - <<pxe_server,PXE Server (pxe_server)>>
 ** Resource Pools (resource_pool)
-** Security Groups (security_group) - <<Security Groups (security_group),Security Groups (security_group)>>
+** Security Groups (security_group) - <<security_group,Security Groups (security_group)>>
 *** Amazon (security_group_amazon)
 *** OpenStack (security_group_openstack)
-** Services (service) - <<Service (service),Service (service)>>
-** Service Resources (service_resource) - <<Service Resource (service_resource),Service Resource (service_resource)>>
-** Service Templates (service_template) - <<Service Template (service_template),Service Template (service_template)>>
-** Snapshots (snapshot) - <<Snapshot (snapshot),Snapshot (snapshot)>>
-** Storages (storage) - <<Datastores (storage),Datastores (storage)>>
-** Switches (switch) - <<Switch (switch),Switch (switch)>>
-** Users (user) - <<User (user),User (user)>>
-** VMs or Templates (vm_or_template) - <<Virtual Machines and Templates (vm_or_template),Virtual Machines and Templates (vm_or_template)>>
+** Services (service) - <<service,Services (service)>>
+** Service Resources (service_resource) - <<service_resource,Service Resource (service_resource)>>
+** Service Templates (service_template) - <<service_template,Service Template (service_template)>>
+** Snapshots (snapshot) - <<snapshot,Snapshot (snapshot)>>
+** Storages (storage) - <<storage,Datastores (storage)>>
+** Switches (switch) - <<switch,Switch (switch)>>
+** Users (user) - <<user,User (user)>>
+** VMs or Templates (vm_or_template) - <<vm_or_template,Virtual Machines and Templates (vm_or_template)>>
 *** Templates (miq_template)
 **** Cloud (template_cloud)
 ***** Amazon (template_amazon)
@@ -342,16 +342,17 @@ Methods without links do not have any additional methods.
 ***** Microsoft (template_microsoft)
 ***** Red Hat Enterprise Virtualization (template_redhat)
 ***** VMware (template_vmware)
-*** VMs (vm) - <<VMs (vm),VMs (vm)>>
-**** Clouds (vm_cloud) - <<VMs for Clouds (vm_cloud),VMs for Clouds (vm_cloud)>>
+*** VMs (vm) - <<vm,VMs (vm)>>
+**** Clouds (vm_cloud) - <<vm_cloud,VMs for Clouds (vm_cloud)>>
 ***** Amazon (vm_amazon)
 ***** OpenStack (vm_openstack)
 **** Infrastructure (vm_infra)
 ***** Microsoft (vm_microsoft)
 ***** Red Hat Enterprise Virtualization (vm_redhat)
 ***** Vmware (vm_vmware)
-** Windows Images (windows_images) - <<Windows Image (windows_image),Windows Image (windows_image)>>
+** Windows Images (windows_images) - <<windows_image,Windows Image (windows_image)>>
 
+[[base-methods]]
 === Base Methods
 These methods may be used with all objects available in the Automate
 Model.
@@ -433,6 +434,7 @@ rescue => err
 end
 ----
 
+[[availability_zone]]
 === Availability Zones (availability_zone)
 [options="header"]
 |====================================================================
@@ -443,6 +445,7 @@ end
 |cloud_subnets              |Returns object's cloud subnets
 |====================================================================
 
+[[classification]]
 === Classifications (classification)
 [options="header"]
 |====================================================================
@@ -454,6 +457,7 @@ end
 |to_tag                     |Returns object's tag mapping
 |====================================================================
 
+[[cloud_network]]
 === Cloud Networks (cloud_network)
 [options="header"]
 |====================================================================
@@ -465,6 +469,7 @@ end
 |vms                        |Returns object's VMs
 |====================================================================
 
+[[cloud_resource_quota]]
 === Cloud Resource Quotas (cloud_resource_quota)
 [options="header"]
 |====================================================================
@@ -473,6 +478,7 @@ end
 |cloud_tenant               |Returns object's cloud tenant
 |====================================================================
 
+[[cloud_subnet]]
 === Cloud Subnets (cloud_subnet)
 [options="header"]
 |====================================================================
@@ -482,6 +488,7 @@ end
 |vms                        |Returns object's VMs
 |====================================================================
 
+[[cloud_tenant]]
 === Cloud Tenants (cloud_tenant)
 [options="header"]
 |====================================================================
@@ -496,6 +503,7 @@ end
 |cloud_resource_quotas      |Returns object's quotas
 |====================================================================
 
+[[customization_template]]
 === Customization Template (customization_template)
 [options="header"]
 |====================================================================
@@ -503,6 +511,7 @@ end
 |Pxe_images                 |Returns customization templates pxe images
 |====================================================================
 
+[[ems_cluster]]
 === Clusters (ems_cluster)
 [options="header"]
 |====================================================================
@@ -547,6 +556,7 @@ end
   end
 ----
 
+[[ems_event]]
 === Management System Events (ems_event)
 [options="header"]
 |====================================================================
@@ -563,7 +573,7 @@ end
 |refresh(*targets)          |Refresh the target types specified (ems, vm, host, src_vm, src_host, dest_vm, or dest_host)
 |====================================================================
 
-
+[[ems_folder]]
 === Management System Folders (ems_folder)
 [options="header"]
 |====================================================================
@@ -574,6 +584,7 @@ end
 |folder_path(*options)      |Returns folders path
 |====================================================================
 
+[[ext_management_system]]
 === Providers (ext_management_system)
 [options="header"]
 |====================================================================
@@ -638,7 +649,7 @@ end
 |cloud_resource_quotas      |Return the provider's resource quotas
 |====================================================================
 
-
+[[firewall_rule]]
 === Firewall Rules (firewall_rule)
 [options="header"]
 |====================================================================
@@ -647,6 +658,7 @@ end
 |source_security_group      |Return object's source security group
 |====================================================================
 
+[[flavor]]
 === Flavors (flavor)
 [options="header"]
 |====================================================================
@@ -655,6 +667,7 @@ end
 |vms                        |Returns object's VMs
 |====================================================================
 
+[[floating_ip]]
 === Floating IPs (floating_ip)
 [options="header"]
 |====================================================================
@@ -664,6 +677,7 @@ end
 |cloud_tenant               |Returns object's cloud tenant
 |====================================================================
 
+[[guest_application]]
 === Guest Applications (guest_application)
 [options="header"]
 |====================================================================
@@ -672,6 +686,7 @@ end
 |host                       |Returns objects Host
 |====================================================================
 
+[[guest_device]]
 === Guest Device (guest_device)
 [options="header"]
 |====================================================================
@@ -682,6 +697,7 @@ end
 |network                    |Returns objects network
 |====================================================================
 
+[[hardware]]
 === Hardware (hardware)
 [options="header"]
 |====================================================================
@@ -696,6 +712,7 @@ end
 |mac_addresses              |Returns objects MAC addresses
 |====================================================================
 
+[[host]]
 === Hosts (host)
 [options="header"]
 |====================================================================
@@ -852,6 +869,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
   end
 ----
 
+[[host_vmware_esx]]
 ==== Hosts: Vmware ESX (host_vmware_esx)
 [options="header"]
 |====================================================================
@@ -868,6 +886,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
 |vmotion_enabled?(device = nil)         |Check to see if vMotion is enabled
 |====================================================================
 
+[[lan]]
 === LAN (lan)
 [options="header"]
 |====================================================================
@@ -879,6 +898,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
 |hosts                      |Returns objects Hosts
 |====================================================================
 
+[[miq_group]]
 === Groups (miq_group)
 [options="header"]
 |====================================================================
@@ -924,6 +944,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
   end
 ----
 
+[[miq_request]]
 === Request (miq_request)
 Request objects are submitted to ManageIQ Server for
 processing. After the request phase, the request becomes a task object.
@@ -1044,6 +1065,7 @@ $evm.root["miq_request"].pending`
 |set_option(key, value)             |Sets the specified key/value pair for the object
 |====================================================================
 
+[[automation_request]]
 ==== Automation Request (automation_request)
 [options="header"]
 |====================================================================
@@ -1051,6 +1073,7 @@ $evm.root["miq_request"].pending`
 |automation_tasks           |Returns objects automate tasks
 |====================================================================
 
+[[miq_host_provision_request]]
 ==== Host Provision Request (miq_host_provision_request)
 [options="header"]
 |====================================================================
@@ -1059,6 +1082,7 @@ $evm.root["miq_request"].pending`
 |ci_type                    |Returns the cloud infrastructure type: `host`
 |====================================================================
 
+[[miq_provision_request]]
 ==== VM Provision Request (miq_provision_request)
 [options="header"]
 |====================================================================
@@ -1159,6 +1183,7 @@ _Example:_
 |vm_template                            |Returns the requests template
 |====================================================================
 
+[[miq_request_task]]
 === Request Task (miq_request_task)
 [options="header"]
 |====================================================================
@@ -1234,6 +1259,7 @@ _Returns:_
 |source                                 |Returns the source object. (The source, or input, object that the task runs against. In the case of provisioning, this would be the VM or template selected to be provisioned.)
 |====================================================================
 
+[[automation_task]]
 ==== Automation Task (automation_task)
 [options="header"]
 |====================================================================
@@ -1242,6 +1268,7 @@ _Returns:_
 |status                 |Returns status of the task
 |====================================================================
 
+[[miq_host_provision]]
 ==== Host Provision Task (miq_host_provision)
 [options="header"]
 |====================================================================
@@ -1251,6 +1278,7 @@ _Returns:_
 |status                     |Returns status of host provision
 |====================================================================
 
+[[miq_provision]]
 ==== VM Provision Task (miq_provision)
 [options="header"]
 |====================================================================
@@ -1450,6 +1478,7 @@ rescue => err
 end
 ----
 
+[[miq_provision_cloud]]
 ==== VM Provisioning for Clouds Task (miq_provision_cloud)
 [options="header"]
 |====================================================================
@@ -1464,6 +1493,7 @@ end
 |cloud_tenants              |Returns object's cloud tenant
 |====================================================================
 
+[[service_template_provision_task]]
 ==== Service Template Provision Task (service_template_provision_task)
 [options="header"]
 |====================================================================
@@ -1480,6 +1510,7 @@ _Example:_
 |status                         |Returns the tasks status
 |====================================================================
 
+[[service_reconfigure_task]]
 ==== Service Reconfiguration Task (service_reconfigure_task)
 [options="header"]
 |====================================================================
@@ -1491,6 +1522,7 @@ _Example:_
 |finished(msg)                  |Sets the task to finished with the supplied message
 |====================================================================
 
+[[vm_migrate_task]]
 ==== VM Migrate Task (vm_migrate_task)
 [options="header"]
 |====================================================================
@@ -1498,6 +1530,7 @@ _Example:_
 |status             |Returns status of the migration task
 |====================================================================
 
+[[miq_proxy]]
 === Proxies (miq_proxy)
 [options="header"]
 |====================================================================
@@ -1506,6 +1539,7 @@ _Example:_
 |powershell(script, returns = 'string') |Submits a powershell script
 |====================================================================
 
+[[miq_server]]
 === Servers (miq_server)
 These methods are available to the ManageIQ Server.
 [options="header"]
@@ -1533,6 +1567,7 @@ These methods are available to the ManageIQ Server.
   end
 ----
 
+[[network]]
 === Network (network)
 [options="header"]
 |====================================================================
@@ -1541,6 +1576,7 @@ These methods are available to the ManageIQ Server.
 |guest_device       |Returns objects guest devices
 |====================================================================
 
+[[pxe_image]]
 === PXE Image (pxe_image)
 [options="header"]
 |====================================================================
@@ -1549,6 +1585,7 @@ These methods are available to the ManageIQ Server.
 |pxe_server                 |Returns objects pxe server
 |====================================================================
 
+[[pxe_server]]
 === PXE Server (pxe_server)
 [options="header"]
 |====================================================================
@@ -1563,6 +1600,7 @@ These methods are available to the ManageIQ Server.
 |windows_images             |Returns objects windows images
 |====================================================================
 
+[[security_group]]
 === Security Groups (security_group)
 [options="header"]
 |====================================================================
@@ -1574,7 +1612,8 @@ These methods are available to the ManageIQ Server.
 |vms                        |Returns object's VMs
 |====================================================================
 
-=== Service (service)
+[[service]]
+=== Services (service)
 [options="header"]
 |====================================================================
 |Method                     |Use
@@ -1607,6 +1646,7 @@ These methods are available to the ManageIQ Server.
 |set_dialog_option(key, value)  |Sets `value` of a dialog option specified by `key`
 |====================================================================
 
+[[service_resource]]
 === Service Resource (service_resource)
 [options="header"]
 |====================================================================
@@ -1617,6 +1657,7 @@ These methods are available to the ManageIQ Server.
 |source             |Returns the source object
 |====================================================================
 
+[[service_template]]
 === Service Template (service_template)
 [options="header"]
 |====================================================================
@@ -1625,6 +1666,7 @@ These methods are available to the ManageIQ Server.
 |owner=(owner)  |Sets owner for the service template
 |====================================================================
 
+[[snapshot]]
 === Snapshot (snapshot)
 These methods can be used on Snapshots
 
@@ -1638,6 +1680,7 @@ These methods can be used on Snapshots
 |remove                 |Removes specified snapshot
 |====================================================================
 
+[[storage]]
 === Datastores (storage)
 [options="header"]
 |====================================================================
@@ -1678,6 +1721,7 @@ These methods can be used on Snapshots
   end
 ----
 
+[[switch]]
 === Switch (switch)
 These methods can be used on Switches.
 
@@ -1689,6 +1733,7 @@ These methods can be used on Switches.
 |lans           |Returns switch's lans
 |====================================================================
 
+[[user]]
 === User (user)
 These methods can be used on the currently logged on user.
 
@@ -1740,6 +1785,7 @@ These methods can be used on the currently logged on user.
   end
 ----
 
+[[vm_or_template]]
 === Virtual Machines and Templates (vm_or_template)
 The following methods can be used on a virtual machine or template
 object.
@@ -1927,6 +1973,7 @@ _Example:_
   end
 ----
 
+[[vm]]
 ==== VMs (vm)
 [options="header"]
 |====================================================================
@@ -1961,6 +2008,7 @@ host = $evm.root['vm']
 cpu_rdy = vm.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes.ago.utc,5.minutes.ago.utc], :avg)
 ----
 
+[[vm_cloud]]
 ==== VMs for Clouds (vm_cloud)
 [options="header"]
 |====================================================================
@@ -1974,6 +2022,7 @@ cpu_rdy = vm.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes.a
 |key_pairs              |Returns object's key pairs
 |====================================================================
 
+[[windows_image]]
 === Windows Image (windows_image)
 [options="header"]
 |====================================================================
@@ -2030,6 +2079,7 @@ else
   $evm.execute(tag_create', "department", :name => "finance", :description => "Finance")
 ----
 
+[[quota]]
 === Quota
 [options="header"]
 |====================================================================
