--- a/methods_available_for_automation/Methods_Available_for_Automation.adoc
+++ b/methods_available_for_automation/Methods_Available_for_Automation.adoc
@@ -8,10 +8,10 @@
 :toclevels: 3
 
 .Abstract
-This guide provides advanced methods for ManageIQ's
-automation functions. Methods can be used from within ManageIQ to create custom actions and workflows for the objects
-managed by ManageIQ. Information and procedures in
-this book are relevant to ManageIQ administrators.
+This guide provides advanced methods for {product-title}'s
+automation functions. Methods can be used from within {product-title} to create custom actions and workflows for the objects
+managed by {product-title}. Information and procedures in
+this book are relevant to {product-title} administrators.
 This document is organized by the object hierarchy in the Automate
 Model.
 
@@ -21,11 +21,11 @@ toc::[]
 
 Account Role::
   A designation assigned to a user allowing or restricting a user to
-  parts and functions of the ManageIQ console.
+  parts and functions of the {product-title} console.
 Action::
   An execution that is performed after a condition is evaluated.
 Alert::
-  ManageIQ alerts notify administrators and
+  {product-title} alerts notify administrators and
   monitoring systems of critical configuration changes and threshold
   limits in the virtual environment. The notification can take the form
   of either an email or an SNMP trap.
@@ -37,16 +37,16 @@ Cloud::
   A pool of on-demand and highly available computing resources. The
   usage of these resources are scaled depending on the user requirements
   and metered for cost.
-ManageIQ Appliance::
+{product-title} Appliance::
   A virtual machine on which the virtual management database (VMDB) and
-  ManageIQ server reside.
-ManageIQ Console::
-  A web-based interface into the ManageIQ Appliance.
-ManageIQ Role::
-  A designation assigned to a ManageIQ server that
-  defines what a ManageIQ server can do.
-ManageIQ Server::
-  The application that runs on the ManageIQ
+  {product-title} server reside.
+{product-title} Console::
+  A web-based interface into the {product-title} Appliance.
+{product-title} Role::
+  A designation assigned to a {product-title} server that
+  defines what a {product-title} server can do.
+{product-title} Server::
+  The application that runs on the {product-title}
   Appliance and communicates with the SmartProxy and the VMDB.
 Cluster::
   Hosts that are grouped together to provide high availability and load
@@ -54,7 +54,7 @@ Cluster::
 Condition::
   A test of criteria triggered by an event.
 Discovery::
-  Process run by the ManageIQ server which finds
+  Process run by the {product-title} server which finds
   virtual machine and cloud providers.
 Drift::
   The comparison of a virtual machine, instance, host, cluster to itself
@@ -62,8 +62,8 @@ Drift::
 Event::
   A trigger to check a condition.
 Event Monitor::
-  Software on the ManageIQ Appliance which monitors
-  external providers for events and sends them to the ManageIQ server.
+  Software on the {product-title} Appliance which monitors
+  external providers for events and sends them to the {product-title} server.
 Host::
   A computer on which virtual machine monitor software is loaded.
 Instance/Cloud Instance::
@@ -89,7 +89,7 @@ Policy::
 Policy Profile::
   A set of policies.
 Refresh::
-  A process run by the ManageIQ server which checks
+  A process run by the {product-title} server which checks
   for relationships of the provider or host to other resources, such as
   storage locations, repositories, virtual machines, or instances. It
   also checks the power states of those resources.
@@ -106,22 +106,22 @@ Repository::
   A place on a datastore resource which contains virtual machines.
 SmartProxy::
   The SmartProxy is a software agent that acts on behalf of the
-  ManageIQ Appliance to perform actions on hosts,
+  {product-title} Appliance to perform actions on hosts,
   providers, storage and virtual machines.
   +
-  The SmartProxy can be configured to reside on the ManageIQ Appliance or on an ESX server version. The
-  SmartProxy can be deployed from the ManageIQ
+  The SmartProxy can be configured to reside on the {product-title} Appliance or on an ESX server version. The
+  SmartProxy can be deployed from the {product-title}
   Appliance, and provides visibility to the VMFS storage. Each storage
   location must have a SmartProxy with visibility to it. The SmartProxy
-  acts on behalf of the ManageIQ Appliance. If the
-  SmartProxy is not embedded in the ManageIQ server,
-  it communicates with the ManageIQ Appliance over
+  acts on behalf of the {product-title} Appliance. If the
+  SmartProxy is not embedded in the {product-title} server,
+  it communicates with the {product-title} Appliance over
   HTTPS on standard port 443.
 SmartState Analysis::
   Process run by the SmartProxy which collects the details of a virtual
   machine or instance. Such details include accounts, drivers, network
   information, hardware, and security patches. This process is also run
-  by the ManageIQ server on hosts and clusters. The
+  by the {product-title} server on hosts and clusters. The
   data is stored in the VMDB.
 SmartTags::
   Descriptors that allow you to create a customized, searchable index
@@ -130,7 +130,7 @@ Storage Location::
   A device, such as a VMware datastore, where digital information
   resides that is connected to a resource.
 Tags::
-  Descriptive terms defined by a ManageIQ user or
+  Descriptive terms defined by a {product-title} user or
   the system used to categorize a resource.
 Template::
   A template is a copy of a preconfigured virtual machine, designed to
@@ -139,7 +139,7 @@ Template::
 Unmanaged Virtual Machine::
   Files discovered on a datastore that do not have a virtual machine
   associated with them in the VMDB. These files may be registered to a
-  provider that the ManageIQ server does not have
+  provider that the {product-title} server does not have
   configuration information on. Possible causes may be that the provider
   has not been discovered or that the provider has been discovered, but
   no security credentials have been provided.
@@ -149,35 +149,35 @@ Virtual Machine::
   of a physical host, or a set of physical hosts, to provide a scalable
   and on-demand method of system provisioning.
 Virtual Management Database (VMDB)::
-  Database used by the ManageIQ Appliance to store
+  Database used by the {product-title} Appliance to store
   information about your resources, users, and anything else required to
   manage your virtual enterprise.
 Virtual Thumbnail::
   An icon divided into smaller areas that summarize the properties of a
   resource.
 Zones::
-  ManageIQ Infrastructure can be organized into
+  {product-title} Infrastructure can be organized into
   zones to configure failover and to isolate traffic. Zones can be
   created based on your environment. Zones can be based on geographic
   location, network location, or function. When first started, new
   servers are put into the default zone.
 
-== Methods Available for Use with ManageIQ
-Methods can be used from within ManageIQ to create
-custom actions and workflows for the objects managed for your ManageIQ Infrastructure. This document describes the methods
-available for use in ManageIQ. This document is
+== Methods Available for Use with {product-title}
+Methods can be used from within {product-title} to create
+custom actions and workflows for the objects managed for your {product-title} Infrastructure. This document describes the methods
+available for use in {product-title}. This document is
 organized by the object hierarchy in the Automate Model.
 
 === $evm.root
 When an Automate method is launched, it has one global variable: `$evm`.
-The `$evm` variable allows the method to communicate back to ManageIQ. The `$evm.root` is the root object in the workspace,
-it provides access to the data currently loaded in the ManageIQ model. It use the objects data to solve more complex
-problems by integrating with ManageIQ methods.
+The `$evm` variable allows the method to communicate back to {product-title}. The `$evm.root` is the root object in the workspace,
+it provides access to the data currently loaded in the {product-title} model. It use the objects data to solve more complex
+problems by integrating with {product-title} methods.
 
 The following is an excerpt from the *InspectMe* method that can be
 found in the *ManageIQ\System\Request* namespace. The dumpRoot method
 accesses the `$evm.root` object, and sends all of its attributes to the
-ManageIQ Automate log for review. In the dumpServer
+{product-title} Automate log for review. In the dumpServer
 Method, the inspect method is run based on the value of the miq_server
 obtained from the `$evm.root` object.
 
@@ -373,7 +373,7 @@ Model.
 |====================================================================
 
 The *InspectMe* *Sample Method* uses many of the Methods shown in this
-document. The method returns attributes of the ManageIQ Server and then returns attributes for the host, cluster, and
+document. The method returns attributes of the {product-title} Server and then returns attributes for the host, cluster, and
 virtual machine from the provider of invocation. In many environments it
 is linked to a button.
 
@@ -778,9 +778,9 @@ pwd_str => "pwd"`
 |ems_custom_keys            |Returns Management Systems custom keys
 |ems_custom_get(key)        |Gets Value for specified Management Systems custom key
 |ems_custom_set(attribute, value)   |Sets value for specified custom key of the Management System
-|custom_keys                |Lists ManageIQ Server custom keys
-|custom_get(key)            |Gets value for specified ManageIQ Server custom key
-|custom_set(key, value)     |Sets value for specified ManageIQ Server custom key
+|custom_keys                |Lists {product-title} Server custom keys
+|custom_get(key)            |Gets value for specified {product-title} Server custom key
+|custom_set(key, value)     |Sets value for specified {product-title} Server custom key
 |ssh_exec(script)           |Runs the specified script on the host
 |get_realtime_metric(metric, range, function)   |Returns specified realtime metric
 |current_memory_usage       |Returns current memory usage
@@ -946,7 +946,7 @@ cpu_rdy = host.get_realtime_metric(:v_pct_cpu_ready_delta_summation, [15.minutes
 
 [[miq_request]]
 === Request (miq_request)
-Request objects are submitted to ManageIQ Server for
+Request objects are submitted to {product-title} Server for
 processing. After the request phase, the request becomes a task object.
 The table below shows the relationship between a request object and a
 task object.
@@ -1541,13 +1541,13 @@ _Example:_
 
 [[miq_server]]
 === Servers (miq_server)
-These methods are available to the ManageIQ Server.
+These methods are available to the {product-title} Server.
 [options="header"]
 |====================================================================
 |Method             |Use
-|zone               |Returns ManageIQ Servers Zone
-|region_number      |Returns ManageIQ Servers Region Number
-|region_name        |Returns ManageIQ Servers Region Name
+|zone               |Returns {product-title} Servers Zone
+|region_number      |Returns {product-title} Servers Region Number
+|region_name        |Returns {product-title} Servers Region Name
 |====================================================================
 
 [source,ruby]
@@ -1796,9 +1796,9 @@ object.
 |changed_vm_value?              |Checks the 2 most recent drift state captures, and answers whether the specified value changed between them
 |collect_running_processes      |Collects the running processes of the object
 |create_snapshot(name, desc = nil)  |Create a snapshot of the object
-|custom_get(key)                |Get the value of specified ManageIQ Server key from the object
-|custom_keys                    |List all ManageIQ Server custom keys for the object
-|custom_set(key, value)         |Set a custom ManageIQ Server key value
+|custom_get(key)                |Get the value of specified {product-title} Server key from the object
+|custom_keys                    |List all {product-title} Server custom keys for the object
+|custom_set(key, value)         |Set a custom {product-title} Server key value
 |datacenter                     |Returns objects Datacenter
 |direct_service                 |Show the direct service relationship of the virtual machine
 |directories                    |Returns number of directories on the object
@@ -1837,7 +1837,7 @@ _Example:_
 |hardware                       |Returns objects Hardware
 |host                           |Returns objects Host
 |migrate(host, pool = nil, priority = "defaultPriority", state = nil)    |Migrates the object to another host. The only required parameter is host
-|miq_provision                  |If VM was created using ManageIQ Server provisioning, this is the miq_provision task instance that created the VM
+|miq_provision                  |If VM was created using {product-title} Server provisioning, this is the miq_provision task instance that created the VM
 |operating_system               |Returns objects Operating System
 |owner                          |Return objects owner
 |owner=(owner)                  |Sets objects owner
