PR Review Changes

--- a/auth/ipa_2fa.adoc
+++ b/auth/ipa_2fa.adoc
@@ -31,7 +31,7 @@ Login as admin, then in _Configure->Configuration->Authentication_
 * Set mode to External (httpd)
 * Check: _Get User Groups from External Authentication (httpd)_
 * Do Not Check: _Enable Single Signon_
-** *Note*: Kerberos SSO with OTP is not supported in the current release.
+** *Note*: Kerberos SSO with OTP is not supported in the current release of FreeIPA 4.1.0 on CentOS/RHEL 7.1
 * Click Save.
 
 The above steps need to be done on each UI and WebService enabled appliance.
