Updated AsciiDoc syntax in the VMware installation guide.

--- a/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Installing_CloudForms.adoc
@@ -1,5 +1,5 @@
 [[installing-cloudforms]]
-== 1. Installing CloudForms
+== Installing CloudForms
 
 CloudForms Management Engine is able to be installed and ready to configure in a few quick steps. After downloading CloudForms Management Engine as a virtual machine image template from the Red Hat Customer Portal, the installation process takes you through the steps of uploading the appliance to a supported virtualization or cloud provider.
 
@@ -10,11 +10,11 @@ After installing the CloudForms Management Engine Appliance, you must configure 
 
 === Obtaining the CloudForms Management Engine Appliance
 
-1.  Go to https://access.redhat.com and log in to the Red Hat Customer Portal using your customer account details.
-2.  Click +Downloads+ in the menu bar.
-3.  Click +A-Z+ to sort the product downloads alphabetically.
-4.  Click +Red Hat CloudForms+ and then +Download Latest+ to access the product download page.
-5.  From the list of installers and images, select the +CFME VMware Virtual Appliance+ download link.
+. Go to https://access.redhat.com and log in to the Red Hat Customer Portal using your customer account details.
+. Click +Downloads+ in the menu bar.
+. Click +A-Z+ to sort the product downloads alphabetically.
+. Click +Red Hat CloudForms+ and then +Download Latest+ to access the product download page.
+. From the list of installers and images, select the +CFME VMware Virtual Appliance+ download link.
 
 === Uploading the Appliance on VMware vSphere
 
@@ -31,22 +31,22 @@ These are the procedural steps as of the time of writing. For more information, 
 
 Use the following procedure to upload the CloudForms Management Engine Appliance OVF template from your local file system using the vSphere Client.
 
-1.  In the vSphere Client, select +File → Deploy OVF Template+. The Deploy OVF Template wizard appears.
-2.  Specify the source location and click Next.
-    * Select +Deploy from File+ to browse your file system for the OVF template, for example cfme-vsphere-5.4-43.x86_64.vsphere.ova.
-    * Select +Deploy from URL+ to specify a URL to an OVF template located on the internet.
-3.  View the +OVF Template Details+ page and click +Next+.
-4.  Select the deployment configuration from the drop-down menu and click +Next+. The option selected typically controls the memory settings, number of CPUs and reservations, and application-level configuration parameters. 
-5.  Select the host or cluster on which you want to deploy the OVF template and click +Next+.
-6.  Select the host on which you want to run the run the CloudForms Management Engine appliance, and click +Next+.
-7.  Navigate to, and select the resource pool where you want to run the CloudForms Management Engine appliance and click +Next+.
-8.  Select a datastore to store the deployed CloudForms Management Engine Appliance, and click Next. Ensure to select a datastore large enough to accommodate the virtual machine and all of its virtual disk files.
-9.  Select the disk format to store the virtual machine virtual disks, and click +Next+.
-    * Select +Thin Provisioned+ if the storage is allocated on demand as data is written to the virtual disks.
-    * Select +Thick Provisioned+ if all storage is immediately allocated.
-10. For each network specified in the OVF template, select a network by right-clicking the +Destination Network+ column in your infrastructure to set up the network mapping and click +Next+.
-11. The +IP Allocation+ page does not require any configuration changes. Leave the default settings in the +IP Allocation+ page and click +Next+.
-12. Set the user-configurable properties and click +Next+. The properties to enter depend on the selected IP allocation scheme. For example, you are prompted for IP related information for the deployed virtual machines only in the case of a fixed IP allocation scheme.
-13. Review your settings and click +Finish+.
+. In the vSphere Client, select +File → Deploy OVF Template+. The Deploy OVF Template wizard appears.
+. Specify the source location and click Next.
+* Select +Deploy from File+ to browse your file system for the OVF template, for example cfme-vsphere-5.4-43.x86_64.vsphere.ova.
+* Select +Deploy from URL+ to specify a URL to an OVF template located on the internet.
+. View the +OVF Template Details+ page and click +Next+.
+. Select the deployment configuration from the drop-down menu and click +Next+. The option selected typically controls the memory settings, number of CPUs and reservations, and application-level configuration parameters. 
+. Select the host or cluster on which you want to deploy the OVF template and click +Next+.
+. Select the host on which you want to run the run the CloudForms Management Engine appliance, and click +Next+.
+. Navigate to, and select the resource pool where you want to run the CloudForms Management Engine appliance and click +Next+.
+. Select a datastore to store the deployed CloudForms Management Engine Appliance, and click Next. Ensure to select a datastore large enough to accommodate the virtual machine and all of its virtual disk files.
+. Select the disk format to store the virtual machine virtual disks, and click +Next+.
+* Select +Thin Provisioned+ if the storage is allocated on demand as data is written to the virtual disks.
+* Select +Thick Provisioned+ if all storage is immediately allocated.
+. For each network specified in the OVF template, select a network by right-clicking the +Destination Network+ column in your infrastructure to set up the network mapping and click +Next+.
+. The +IP Allocation+ page does not require any configuration changes. Leave the default settings in the +IP Allocation+ page and click +Next+.
+. Set the user-configurable properties and click +Next+. The properties to enter depend on the selected IP allocation scheme. For example, you are prompted for IP related information for the deployed virtual machines only in the case of a fixed IP allocation scheme.
+. Review your settings and click +Finish+.
 
 The progress of the import task appears in the vSphere Client Status panel.
