--- a/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
+++ b/doc-Installing_CloudForms_on_VMware_vSphere/Configuring_CloudForms.adoc
@@ -142,8 +142,8 @@ CloudForms Management Engine configures the external database.
 
 You can configure a worker appliance through the terminal. These steps demonstrate how to join a worker appliance to an appliance that already has a region configured with a database.
 
-1.  Start the appliance and open a terminal console from your virtualization or cloud provider.
-2.  The login screen appears:
+. Start the appliance and open a terminal console from your virtualization or cloud provider.
+. The login screen appears:
 +
 -----------------------------------------------------------------
     To administer this appliance, browse to https://192.168.0.40/
@@ -152,13 +152,13 @@ You can configure a worker appliance through the terminal. These steps demonstra
 -----------------------------------------------------------------
 +
 Enter the administration username and password.
-3.  The status screen appears and displays details about the CloudForms Management Engine Appliance. Press +Enter+ to change to the configuration menu.
-4.  Select +8) Configure Database+ from the menu.
-5.  You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
-6.  Choose +2) External+ for the database location.
-7.  Enter the database hostname or IP address when prompted.
-8.  Enter the database name or leave blank for the default (vmdb_production).
-9.  Enter the database username or leave blank for the default (root).
-10. Enter the chosen database user's password.
-11. Confirm the configuration if prompted.
+. The status screen appears and displays details about the CloudForms Management Engine Appliance. Press +Enter+ to change to the configuration menu.
+. Select +8) Configure Database+ from the menu.
+. You are prompted to create or fetch a security key. Select the option to fetch the key from the first CFME appliance. All CFME appliances in a multi-region deployment must use the same key.
+. Choose +2) External+ for the database location.
+. Enter the database hostname or IP address when prompted.
+. Enter the database name or leave blank for the default (vmdb_production).
+. Enter the database username or leave blank for the default (root).
+. Enter the chosen database user's password.
+. Confirm the configuration if prompted.
 
