--- a/doc-Release_Notes/enhancements.adoc
+++ b/doc-Release_Notes/enhancements.adoc
@@ -40,25 +40,6 @@ The Event Switchboard delivers the following capabilities:
 * Move the current event definitions into the database.
 * Map the events through to automation.
 
-*Pluggable Providers*
-
-Red Hat CloudForms now provides the ability to vendors to write
-their own providers for Red Hat CloudForms using community
-available practices and documentation. Previously, Red Hat Insight
-was used to help stickiness with existing Red Hat accounts by
-supplying detailed information about security vulnerabilities as
-well as tuning recommendations. In Red Hat CloudForms 4.0, there is
-no sharing of data between Red Hat CloudForms and the Red Hat
-Insights plugin. Red Hat Insights is used as a pluggable user interface module
-to the Red Hat CloudForms user interface.
-
-The Pluggable providers provide the following enhancement to Red
-Hat CloudForms:
-
-* Allows community to create providers for the product
-* Simplifies the previous architecture that supported providers by namespacing of the provider code giving clear separation between providers.
-* Enable the pluggability aspects of the framework project by separating the existing vendor providers into individual folders/namespaces.
-
 *Multi Tenancy*
 
 Multitenancy in Red Hat CloudForms offers several enhancements, with an ability to:
@@ -80,14 +61,33 @@ their Red Hat CloudForms deployment.
 The integration of Red Hat OpenShift v3 providers in Red Hat
 CloudForms provides support in the following areas, with an ability to:
 
-* View the topology of the OpenShift infrastructure (Inventory IUC1).
-* Link any OpenShift inventory object to its hosting infrastructure (Cross Linking IUC2). Red Hat CloudForms can cross-link the OpenShift components to either their virtual or physical counterparts.
-* Generate a graphical topology map launched from the relationship area of the user interface (Topology Widget IUC4).
- * See the capacity that the RHEL Atomic Platform nodes have to offer (Capacity IUC5).
-* See how OpenShift Enterprise components (CPU, Memory, Storage and Networking) are utilized (Utilization IUC6).
-* Deliver fleecing images (IUC9).
-* Have a dashboard showing details of your OpenShift Enterprise infrastructure (Dashboard IUC10).
-* Receive events from OpenShift (Events EUC2).
+* View the topology of the OpenShift infrastructure.
+* Link any OpenShift inventory object to its hosting infrastructure. Red Hat CloudForms can cross-link the OpenShift components to either their virtual or physical counterparts.
+* Generate a graphical topology map launched from the relationship area of the user interface.
+ * See the capacity that the RHEL Atomic Platform nodes have to offer.
+* See how OpenShift Enterprise components (CPU, Memory, Storage and Networking) are utilized.
+* Deliver fleecing images.
+* Have a dashboard showing details of your OpenShift Enterprise infrastructure.
+* Receive events from OpenShift.
+
+*Pluggable Providers*
+
+Red Hat CloudForms now provides the ability to vendors to write
+their own providers for Red Hat CloudForms using community
+available practices and documentation. Previously, Red Hat Insight
+was used to identify key issues in the Red Hat CloudForms deployment by
+supplying detailed information about security vulnerabilities as
+well as tuning recommendations. In Red Hat CloudForms 4.0, there is
+no sharing of data between Red Hat CloudForms and the Red Hat
+Insights plugin. Red Hat Insights is used as a pluggable user interface module
+to the Red Hat CloudForms user interface.
+
+The Pluggable providers provide the following enhancement to Red
+Hat CloudForms:
+
+* Allows community to create providers for the product
+* Simplifies the previous architecture that supported providers by namespacing of the provider code giving clear separation between providers.
+* Enable the pluggability aspects of the framework project by separating the existing vendor providers into individual folders/namespaces.
 
 *Self Service Portal*
 
